FIX: Adjusted z-index of monitor UI

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -402,6 +402,7 @@ html, body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 30;
   }
   
   .wrapper button {
